# ObjectHighlighter

./: .gitignore  CMakeLists.txt  ControlNode.cpp  ControlNode.h  DataStructs.h  Makefile  Node.h  NodeRunner.h  ObjectHighlighter.cpp  ObjectHighlighter.h  OutputNode.cpp  OutputNode.h  README.md  ReaderNode.cpp  ReaderNode.h  ThreadPool.h  ThreadSafeQ.h  ThreadSafeQueue.h  TrackerNode.cpp  TrackerNode.h  VideoProcessor.cpp  VideoProcessor.h  main.cpp
